# Baio

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  autoapp.py  docker-compose.yml  package-lock.json  package.json  webpack.config.js
.github/workflows/: lint.yml
backend/: .env  .gitignore  Dockerfile  abi.json  alembic.ini  baio.py  config.py  env.sample  pyproject.toml  requirements.dev.txt  requirements.txt  start.sh
backend/app/: db.py  main.py  settings.py
backend/app/api/: schemas.py
backend/app/api/auth/: schemas.py  use_cases.py  views.py
backend/app/api/sensor/: schemas.py  use_cases.py  views.py
backend/app/db/: __init__.py  model.py
backend/app/middleware/: auth.py
backend/app/models/: base.py  sensor.py  users.py
backend/app/routers/v1/: __init__.py  healthrecords.py
backend/app/routers/ws/: __init__.py
backend/app/security/: authentication.py
backend/app/service/: dapp.py
backend/app/websocket/: views.py
backend/migrations/versions/: 2733c2b2aecc_001_users_table.py  bdc7ebc5aa93_init.py  e43dc0009966_002_sensors_table.py
baio/: .metadata  README.md  pubspec.yaml
client/: .gitignore  abi.json  client.py  config.json  requirements.txt  upload.sh
dapp/: hardhat.config.ts  pnpm-lock.yaml
flask_thesis_app/: app.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
mobile/: pubspec.yaml
requirements/: prod.txt
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  test_database.py  test_forms.py  test_functional.py  test_models.py
(+100 files in other folders)
